2007-02-06  Stepan Kasal  <skasal@redhat.com>

	* bootstrap.sh: Add "set -e".

2007-01-09  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (frysk/pkgdatadir/helloworld.o)
	(frysk/pkgdatadir/test-core): Delete rules, now generated by
	common/Makefile.gen.sh.
	(pkgdata_DATA): Do not add frysk/pkgdatadir/test-core or
	frysk/pkgdatadir/helloworld.o.
	(CLEANFILES): Ditto.

2006-12-19  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (frysk/pkglibdir/fsystest): Delete rule, moved to
	Makefile.gen.sh.

2006-12-18  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (pkglib_SCRIPTS): Add frysk/pkglibdir/fsystest.
	(frysk/pkglibdir/fsystest): New rule.

2006-12-15  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (SUBDIRS, CHECK_SUBDIRS): Remove libunwind from
	check list.  Partially re-instate code lost in 2006-12-08 changes.
	(check-recursive): Add.

2006-12-11  Andrew Cagney  <cagney@redhat.com>

	* .cvsignore: Clean up; remove .deps, gij.sh, TestRunner,
	TestRunner.java, TestJUnits.java, Makefile, *.db, *jar,
	config.log, config.status; add files.list.

	depcomp install-sh missing config.guess config.sub

2006-12-08  Andrew Cagney  <cagney@redhat.com>

	* bootstrap.sh: Pass --cni to Makefile.gen.sh.

	* Makefile.am (GEN_GCJ_LDADD): Remove conditional addition of
	libunwind.
	(CHECK_SUBDIRS): Delete, fold into SUBDIRS.
	* configure.ac: Remove code conditionally adding libunwind.
	* bootstrap.sh (FILE_LIST): Remove code conditionally adding
	lib/unwind, simplify.
	
	* bootstrap.sh (FILE_LIST): List lib, not all lib's
	sub-directories.

2006-12-08  Nurdin Premji  <npremji@redhat.com>

	* bootstrap.sh (FILE_LIST): Added lib/stdcpp.
	* Makefile.am (EXTRA_DIST): added lib/stdcpp/ChangeLog.
	(GEN_GCJ_LDADD): Added -lstdc++

2006-12-08  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (AM_CXXFLAGS): Add include/ directory.
	(GEN_GCJ_LDADD): Add -laudit.

2006-11-14  Stepan Kasal  <skasal@redhat.com>

	* configure.ac: The included file `common/acinclude.m4' was renamed