@@ -1,5 +1,8 @@
 2007-02-06  Stepan Kasal  <skasal@redhat.com>
 
+	* Makefile.am (noinst_HEADERS): Add include/frysk-asm.h.
+	(noinstdir): Nuke.
+
 	* bootstrap.sh: Add "set -e".
 
 2007-01-09  Andrew Cagney  <cagney@redhat.com>
